--- a/app/src/main/res/navigation/auth_nav_graph.xml
+++ b/app/src/main/res/navigation/auth_nav_graph.xml
@@ -3,27 +3,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/auth_nav_graph"
+    app:startDestination="@id/loginFragment"
     tools:ignore="InvalidNavigation">
 
     <fragment
-        android:id="@+id/signUpFragment"
+        android:id="@+id/registerFragment"
         android:name="com.pth.androidapp.presentation.auth.register.RegisterFragment"
-        android:label="SignUpFragment"
+        android:label="RegisterFragment"
         tools:layout="@layout/fragment_register">
+
         <action
-            android:id="@+id/action_signUpFragment_to_signInFragment"
-            app:destination="@id/signInFragment"
-            app:popUpTo="@id/signUpFragment"
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/registerFragment"
             app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
-        android:id="@+id/signInFragment"
+        android:id="@+id/loginFragment"
         android:name="com.pth.androidapp.presentation.auth.login.LoginFragment"
-        android:label="SignInFragment"
+        android:label="LoginFragment"
         tools:layout="@layout/fragment_login">
+
         <action
-            android:id="@+id/action_signInFragment_to_signUpFragment"
-            app:destination="@id/signUpFragment" />
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
     </fragment>
+
 </navigation>
